# Auvo_CSV_Service

./: .gitignore  README.md  config.json  main.py  pyproject.toml  setup.py
common/: logger.py
controller/: apiauvo.py
models/: task.py
